--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,20 @@
     <string name="video">Video</string>
     <string name="width">Width</string>
     <string name="height">Height</string>
-    <string name="pixelate">PIXELATE</string>
     <string name="gray">GRAY</string>
     <string name="rgb"><font color='red'>R</font><font color='green'>G</font><font color='blue'>B</font></string>
+    <string name="reflect_on_y_axis">Reflect on Y Axis.</string>
+    <string name="reflect_on_x_axis">Reflect on X Axis.</string>
+    <string name="pick_image_from_gallery">Pick image from gallery.</string>
+    <string name="take_a_photo_from_camera">Take a photo from camera.</string>
+    <string name="resize_image">Resize image.</string>
+    <string name="crop_image">Crop image.</string>
+    <string name="pixelate_image">Pixelate image.</string>
+    <string name="resize">RESIZE</string>
+    <string name="crop">CROP</string>
+    <string name="pixelate">PIXELATE</string>
+    <string name="fromx">fromX</string>
+    <string name="fromy">fromY</string>
+    <string name="tox">toX</string>
+    <string name="toy">toY</string>
 </resources>
