Image backstack is added. Undo feature is added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="fromy">fromY</string>
     <string name="tox">toX</string>
     <string name="toy">toY</string>
+    <string name="undo">Undo</string>
 </resources>
