--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="min_filter">MIN FILTER</string>
     <string name="max_filter">MAX FILTER</string>
     <string name="median_filter">MEDIAN FILTER</string>
+    <string name="average_filter">AVERAGE FILTER</string>
 </resources>
